Alignment temporary solved, but needs to improve it.

--- a/presentation/styles.css
+++ b/presentation/styles.css
@@ -1,5 +1,3 @@
-/* ---- reset ---- */
-
 body {
     margin: 0;
     background-color: #070825;
@@ -11,8 +9,6 @@ canvas {
     display: block;
     vertical-align: bottom;
 }
-
-/* ---- particles.js container ---- */
 
 #particles-js {
     position: absolute;
@@ -26,7 +22,6 @@ canvas {
     height: 5px;
     display: inline-block;
 }
-/* -- -- -- -- -- -- -- -- -- -- */
 
 .main-title {
     color: #ffffff;
@@ -41,8 +36,6 @@ canvas {
 }
 
 .container-2 {
-    /* width: 48px;
-    height: 48px; */
     margin-left: auto;
     margin-right: auto;
 }
@@ -68,4 +61,7 @@ canvas {
 
 .container-4 {
     padding: 1%;
+    margin-left: 18%;
+    
+    float: inline-start;
 }
